# fast-api-starter

./: .gitignore  README.md  basic_of_python.ipynb  main.py  pyproject.toml
docker/: .env.example  Makefile  compose.yml
docker/.devcontainer/: devcontainer.json  docker-compose.yml
docker/python/: Dockerfile
