[tool.poetry]
name = "docker-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
fastapi = {extras = ["all"], version = "^0.103.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]